--- a/sass/includes/misc.scss
+++ b/sass/includes/misc.scss
@@ -348,9 +348,6 @@ div.organisation_contact div.td {
 div.organisation_contact div.td.xml-type {
         overflow: visible;
 }
-div.organisation_contact.update {
-        overflow-y: auto;
-}
 div.organisation_contact.update div.tr {
         clear: none;
 }
